--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <div class="container ">
               <div class="detail-box">
                 <h1>
-                  We Build <br />
+                 i build<br />
                   The Things Architects <br />
                   Dream Up
                 </h1>
