--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <div class="container ">
               <div class="detail-box">
                 <h1>
-                  We Build <br />
+                  I Build <br />
                   The Things Architects <br />
                   Dream Up
                 </h1>
@@ -209,7 +209,7 @@
               <h2>Welcome to <span>Troweld</span></h2>
             </div>
             <p>
-              Simply dummy text of the printing and typesetting industry.
+              SAHIL of the printing and typesetting industry.
               Lorem Ipsum has been the industry's standard dummy text ever
               since the 1500s, when an unknown printer took a galley of type
               and scrambled it to make a type specimen book. It has s
