--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
             </div>
             <div class="detail-box">
               <h5>
-                Home Welding
+                Sahil Welding
               </h5>
               <p>
                 when looking at its layout. The point of using Lorem Ipsum is
