--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
                 </h5>
                 <ul>
                   <li class=" active">
-                    <a class="" href="index.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="" href="index.html">Sahil <span class="sr-only">(current)</span></a>
                   </li>
                   <li class="">
                     <a class="" href="about.html">About </a>
