--- a/service.html
+++ b/service.html
@@ -49,13 +49,13 @@
             <a href="">
               <i class="fa fa-phone" aria-hidden="true"></i>
               <span>
-                Call : +01 123455678990
+                Call : +91 7208600293
               </span>
             </a>
             <a href="">
               <i class="fa fa-envelope" aria-hidden="true"></i>
               <span>
-                sahil@gmail.com
+                agromart@gmail.com
               </span>
             </a>
           </div>
