--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <header class="header_section">
       <div class="header_top">
         <div class="container-fluid header_top_container">
-          <a class="navbar-brand " href="index.html"> Tro<span>Weld</span> </a>
+          <a class="navbar-brand " href="index.html"> Agro<span>Mart</span> </a>
           <div class="contact_nav">
             <a href="">
               <i class="fa fa-map-marker" aria-hidden="true"></i>
