--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Troweld</title>
+  <title>AgroMart</title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -131,7 +131,7 @@
         <div class="col-md-6">
           <div class="detail-box">
             <div class="heading_container">
-              <h2>Welcome to <span>Troweld</span></h2>
+              <h2>Welcome to <span>AgroMart</span></h2>
             </div>
             <p>
               Simply dummy text of the printing and typesetting industry.
