--- a/about.html
+++ b/about.html
@@ -146,7 +146,7 @@
         </div>
         <div class="col-md-6 ">
           <div class="img-box">
-            <img src="images/about-img.png" alt="" />
+            <img src="images/symbol-img.jpeg" alt="" />
           </div>
         </div>
       </div>
