--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
         </div>
         <div class="col-md-6 ">
           <div class="img-box">
-            <img src="images/symbol-img.jpeg" alt="" />
+            <img src="images/farmer-img.jpg" alt="" />
           </div>
         </div>
       </div>
