--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav  ">
                 <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Sahil <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="service.html">Services</a>
@@ -230,82 +230,6 @@
 
   <!-- end about section -->
 
-  <!-- portfolio section -->
-
-  <section class="portfolio_section ">
-    <div class="container">
-      <div class="heading_container heading_center">
-        <h2>
-          Our Work Portfolio
-        </h2>
-      </div>
-      <div class="carousel-wrap ">
-        <div class="filter_box">
-          <nav class="owl-filter-bar">
-            <a href="#" class="item active" data-owl-filter="*">All</a>
-            <a href="#" class="item" data-owl-filter=".decorative">DECORATIVE</a>
-            <a href="#" class="item" data-owl-filter=".facade">FACADES </a>
-            <a href="#" class="item" data-owl-filter=".perforated">PERFORATED
-            </a>
-            <a href="#" class="item" data-owl-filter=".railing">RAILINGS </a>
-          </nav>
-        </div>
-      </div>
-    </div>
-    <div class="owl-carousel portfolio_carousel">
-      <div class="item decorative">
-        <div class="box">
-          <div class="img-box">
-            <img src="images/p1.jpg" alt="" />
-            <div class="btn_overlay">
-              <a href="" class="">
-                See More
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="item facade">
-        <div class="box">
-          <div class="img-box">
-            <img src="images/p2.jpg" alt="" />
-            <div class="btn_overlay">
-              <a href="" class="">
-                See More
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="item perforated decorative">
-        <div class="box">
-          <div class="img-box">
-            <img src="images/p3.jpg" alt="" />
-            <div class="btn_overlay">
-              <a href="" class="">
-                See More
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="item railing">
-        <div class="box">
-          <div class="img-box">
-            <img src="images/p1.jpg" alt="" />
-            <div class="btn_overlay">
-              <a href="" class="">
-                See More
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- end portfolio section -->
-
   <!-- service section -->
 
   <section class="service_section layout_padding">
@@ -418,15 +342,6 @@
             </form>
           </div>
         </div>
-        <div class="col-md-6 px-0">
-          <div class="map_container">
-            <div class="map">
-              <div id="googleMap"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
   </section>
   <!-- end contact section -->
 
@@ -451,17 +366,12 @@
                           <img src="images/client.jpg" alt="" />
                         </div>
                         <h5>
-                          Alex Jonson
+                          Name Of Customer
                         </h5>
                       </div>
                       <div class="detail-box">
                         <p>
-                          ipsum dolor sit amet, consectetur adipiscing elit,
-                          sed do eiusmod tempor incididunt ut labore et dolore
-                          magna aliqua. Ut enim ad minim veniam, quis nostrud
-                          exercitation ullamco laboris nisi ut aliquip ex ea
-                          commodo consequat. Duis aute irure dolor in
-                          reprehenderit in voluptate velit
+                      ---------------------------
                         </p>
                       </div>
                     </div>
@@ -473,17 +383,12 @@
                           <img src="images/client.jpg" alt="" />
                         </div>
                         <h5>
-                          Alex Jonson
+                          Name Of Customer 2
                         </h5>
                       </div>
                       <div class="detail-box">
                         <p>
-                          ipsum dolor sit amet, consectetur adipiscing elit,
-                          sed do eiusmod tempor incididunt ut labore et dolore
-                          magna aliqua. Ut enim ad minim veniam, quis nostrud
-                          exercitation ullamco laboris nisi ut aliquip ex ea
-                          commodo consequat. Duis aute irure dolor in
-                          reprehenderit in voluptate velit
+                         -------------
                         </p>
                       </div>
                     </div>
@@ -495,17 +400,12 @@
                           <img src="images/client.jpg" alt="" />
                         </div>
                         <h5>
-                          Alex Jonson
+                            Name Of Customer 3
                         </h5>
                       </div>
                       <div class="detail-box">
                         <p>
-                          ipsum dolor sit amet, consectetur adipiscing elit,
-                          sed do eiusmod tempor incididunt ut labore et dolore
-                          magna aliqua. Ut enim ad minim veniam, quis nostrud
-                          exercitation ullamco laboris nisi ut aliquip ex ea
-                          commodo consequat. Duis aute irure dolor in
-                          reprehenderit in voluptate velit
+                          ---------------
                         </p>
                       </div>
                     </div>
@@ -533,7 +433,7 @@
     <div class="info_container layout_padding2">
       <div class="container">
         <div class="info_logo">
-          <a class="navbar-brand" href="index.html"> Tro<span>Weld</span> </a>
+          <a class="navbar-brand" href="index.html"> Agro<span>Mart</span> </a>
         </div>
         <div class="info_main">
           <div class="row">
@@ -544,7 +444,7 @@
                 </h5>
                 <ul>
                   <li class=" active">
-                    <a class="" href="index.html">Sahil <span class="sr-only">(current)</span></a>
+                    <a class="" href="index.html">Home <span class="sr-only">(current)</span></a>
                   </li>
                   <li class="">
                     <a class="" href="about.html">About </a>
@@ -563,11 +463,10 @@
             </div>
             <div class="col-md-3 ">
               <h5>
-                Welding
+                Farming
               </h5>
               <p>
-                Lorem ipsum dolor sit amet, consectetur
-                adipiscinaliquaLoreadipiscing
+                A Need For Every Living One 
               </p>
             </div>
             <div class="col-md-3 mx-auto  ">
@@ -591,11 +490,10 @@
             </div>
             <div class="col-md-3">
               <h5>
-                Our welding center
+                Our  center
               </h5>
               <p>
-                Lorem ipsum dolor sit amet, consectetur
-                adipiscinaliquaLoreadipiscing
+                mahim mumbai
               </p>
             </div>
           </div>
@@ -617,7 +515,7 @@
                     <a href="#" class="link-box">
                       <i class="fa fa-phone" aria-hidden="true"></i>
                       <span>
-                        Call +01 1234567890
+                        Call +91 7208600293
                       </span>
                     </a>
                   </div>
@@ -625,7 +523,7 @@
                     <a href="#" class="link-box">
                       <i class="fa fa-envelope" aria-hidden="true"></i>
                       <span>
-                        demo@gmail.com
+                        agromart@gmail.com
                       </span>
                     </a>
                   </div>
@@ -655,7 +553,7 @@
     <div class="container">
       <p>
         &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
+        <a href="https://html.design/">AgroMart</a>
       </p>
     </div>
   </footer>
