--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
         <div class="col-sm-6 col-md-4">
           <div class="box ">
             <div class="img-box">
-              <img src="images/s1.png" alt="" />
+              <img src="images/seller.jpg.png" alt="" />
             </div>
             <div class="detail-box">
               <h5>
@@ -256,7 +256,7 @@
         <div class="col-sm-6 col-md-4">
           <div class="box ">
             <div class="img-box">
-              <img src="images/s2.png" alt="" />
+              <img src="images/buyer.png" alt="" />
             </div>
             <div class="detail-box">
               <h5>
@@ -271,7 +271,7 @@
         <div class="col-sm-6 col-md-4">
           <div class="box ">
             <div class="img-box">
-              <img src="images/s3.png" alt="" />
+              <img src="images/new.png" alt="" />
             </div>
             <div class="detail-box">
               <h5>
