--- a/service.html
+++ b/service.html
@@ -192,7 +192,7 @@
 
   <!-- info section -->
 
-  <section class="info_section ">
+ <section class="info_section ">
     <div class="info_container layout_padding2">
       <div class="container">
         <div class="info_logo">
@@ -226,11 +226,10 @@
             </div>
             <div class="col-md-3 ">
               <h5>
-                Welding
+                Farming
               </h5>
               <p>
-                Lorem ipsum dolor sit amet, consectetur
-                adipiscinaliquaLoreadipiscing
+                A Need For Every Living One 
               </p>
             </div>
             <div class="col-md-3 mx-auto  ">
@@ -254,11 +253,10 @@
             </div>
             <div class="col-md-3">
               <h5>
-                Our welding center
+                Our  center
               </h5>
               <p>
-                Lorem ipsum dolor sit amet, consectetur
-                adipiscinaliquaLoreadipiscing
+                mahim mumbai
               </p>
             </div>
           </div>
@@ -280,7 +278,7 @@
                     <a href="#" class="link-box">
                       <i class="fa fa-phone" aria-hidden="true"></i>
                       <span>
-                        Call +01 1234567890
+                        Call +91 7208600293
                       </span>
                     </a>
                   </div>
@@ -288,7 +286,7 @@
                     <a href="#" class="link-box">
                       <i class="fa fa-envelope" aria-hidden="true"></i>
                       <span>
-                        demo@gmail.com
+                        agromart@gmail.com
                       </span>
                     </a>
                   </div>
