--- a/service.html
+++ b/service.html
@@ -138,11 +138,10 @@
             </div>
             <div class="detail-box">
               <h5>
-                Home Welding
+                Seller
               </h5>
               <p>
-                when looking at its layout. The point of using Lorem Ipsum is
-                that it has a more-or-less normal
+               For Farmers To Sell Their Crops
               </p>
             </div>
           </div>
@@ -154,11 +153,10 @@
             </div>
             <div class="detail-box">
               <h5>
-                Gate Welding
+               Buyer
               </h5>
               <p>
-                when looking at its layout. The point of using Lorem Ipsum is
-                that it has a more-or-less normal
+                For Buyers To Purchase The Crops
               </p>
             </div>
           </div>
@@ -170,64 +168,14 @@
             </div>
             <div class="detail-box">
               <h5>
-                Window Welding
+                New Arrivals
               </h5>
               <p>
-                when looking at its layout. The point of using Lorem Ipsum is
-                that it has a more-or-less normal
+                Newly items launch
               </p>
             </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4">
-          <div class="box ">
-            <div class="img-box">
-              <img src="images/s4.png" alt="" />
-            </div>
-            <div class="detail-box">
-              <h5>
-                Machine Welding
-              </h5>
-              <p>
-                when looking at its layout. The point of using Lorem Ipsum is
-                that it has a more-or-less normal
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4">
-          <div class="box ">
-            <div class="img-box">
-              <img src="images/s5.png" alt="" />
-            </div>
-            <div class="detail-box">
-              <h5>
-                Bike Welding
-              </h5>
-              <p>
-                when looking at its layout. The point of using Lorem Ipsum is
-                that it has a more-or-less normal
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4">
-          <div class="box ">
-            <div class="img-box">
-              <img src="images/s6.png" alt="" />
-            </div>
-            <div class="detail-box">
-              <h5>
-                Car Welding
-              </h5>
-              <p>
-                when looking at its layout. The point of using Lorem Ipsum is
-                that it has a more-or-less normal
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
       <div class="btn-box">
         <a href="">
           Read More
