--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
     <header class="header_section">
       <div class="header_top">
         <div class="container-fluid header_top_container">
-          <a class="navbar-brand " href="index.html"> Tro<span>Weld</span> </a>
+          <a class="navbar-brand " href="index.html"> Agro<span>Mart</span> </a>
           <div class="contact_nav">
             <a href="">
               <i class="fa fa-map-marker" aria-hidden="true"></i>
@@ -78,7 +78,7 @@
       <div class="header_bottom">
         <div class="container-fluid">
           <nav class="navbar navbar-expand-lg custom_nav-container ">
-            <a class="navbar-brand navbar_brand_mobile" href="index.html"> Tro<span>Weld</span> </a>
+            <a class="navbar-brand navbar_brand_mobile" href="index.html"> Agro<span>Mart</span> </a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class=""> </span>
@@ -134,10 +134,10 @@
               <h2>Welcome to <span>AgroMart</span></h2>
             </div>
             <p>
-              Simply dummy text of the printing and typesetting industry.
-              Lorem Ipsum has been the industry's standard dummy text ever
-              since the 1500s, when an unknown printer took a galley of type
-              and scrambled it to make a type specimen book. It has s
+              to eliminate the uncertainty around pricing and buyers. By providing a direct channel to genuine buyers, we empower farmers to secure equitable prices for their produce. The bedrock of this initiative is transparency – from product listing to transaction.
+Through this platform, we envision a future where fairness and clarity reign, enriching the lives of our farming community and fostering a more sustainable agricultural landscape.
+Our website will also empower the farmers by providing them with adequate knowledge about farming techniques and also about the demand and prices of different products.
+ 
             </p>
             <a href="">
               Read More
