--- a/about.html
+++ b/about.html
@@ -134,10 +134,12 @@
               <h2>Welcome to <span>AgroMart</span></h2>
             </div>
             <p>
-              to eliminate the uncertainty around pricing and buyers. By providing a direct channel to genuine buyers, we empower farmers to secure equitable prices for their produce. The bedrock of this initiative is transparency – from product listing to transaction.
+              To eliminate the uncertainty around pricing and buyers. By providing a direct channel to genuine buyers, we empower farmers to secure equitable prices for their produce. The bedrock of this initiative is transparency – from product listing to transaction.
 Through this platform, we envision a future where fairness and clarity reign, enriching the lives of our farming community and fostering a more sustainable agricultural landscape.
 Our website will also empower the farmers by providing them with adequate knowledge about farming techniques and also about the demand and prices of different products.
- 
+
+              Why choose us 
+              ECNOMIC : To eliminate uncertinatiy around pricing and buyers
             </p>
             <a href="">
               Read More
@@ -191,11 +193,10 @@ Our website will also empower the farmers by providing them with adequate knowle
             </div>
             <div class="col-md-3 ">
               <h5>
-                Welding
+               FARMING
               </h5>
               <p>
-                Lorem ipsum dolor sit amet, consectetur
-                adipiscinaliquaLoreadipiscing
+                A Need For Every Living One
               </p>
             </div>
             <div class="col-md-3 mx-auto  ">
@@ -219,11 +220,10 @@ Our website will also empower the farmers by providing them with adequate knowle
             </div>
             <div class="col-md-3">
               <h5>
-                Our welding center
+                Our center
               </h5>
               <p>
-                Lorem ipsum dolor sit amet, consectetur
-                adipiscinaliquaLoreadipiscing
+                mahim mumbai
               </p>
             </div>
           </div>
@@ -245,7 +245,7 @@ Our website will also empower the farmers by providing them with adequate knowle
                     <a href="#" class="link-box">
                       <i class="fa fa-phone" aria-hidden="true"></i>
                       <span>
-                        Call +01 1234567890
+                        Call +91 7208600293
                       </span>
                     </a>
                   </div>
@@ -253,7 +253,7 @@ Our website will also empower the farmers by providing them with adequate knowle
                     <a href="#" class="link-box">
                       <i class="fa fa-envelope" aria-hidden="true"></i>
                       <span>
-                        demo@gmail.com
+                        agromart@gmail.com
                       </span>
                     </a>
                   </div>
@@ -283,7 +283,7 @@ Our website will also empower the farmers by providing them with adequate knowle
     <div class="container">
       <p>
         &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
+        <a href="https://html.design/">AgroMart</a>
       </p>
     </div>
   </footer>
