--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
     <header class="header_section">
       <div class="header_top">
         <div class="container-fluid header_top_container">
-          <a class="navbar-brand " href="index.html"> Tro<span>Weld</span> </a>
+          <a class="navbar-brand " href="index.html"> Agro<span>Mart</span> </a>
           <div class="contact_nav">
             <a href="">
               <i class="fa fa-map-marker" aria-hidden="true"></i>
@@ -136,17 +136,17 @@
         <div class="filter_box">
           <nav class="owl-filter-bar">
             <a href="#" class="item active" data-owl-filter="*">All</a>
-            <a href="#" class="item" data-owl-filter=".decorative">DECORATIVE</a>
-            <a href="#" class="item" data-owl-filter=".facade">FACADES </a>
-            <a href="#" class="item" data-owl-filter=".perforated">PERFORATED
+            <a href="#" class="item" data-owl-filter=".vegetables">VEGETABLES</a>
+            <a href="#" class="item" data-owl-filter=".fruits">FRUITS </a>
+            <a href="#" class="item" data-owl-filter=".other crops">OTHER CROPS
             </a>
-            <a href="#" class="item" data-owl-filter=".railing">RAILINGS </a>
+            
           </nav>
         </div>
       </div>
     </div>
     <div class="owl-carousel portfolio_carousel">
-      <div class="item decorative">
+      <div class="item vegetables">
         <div class="box">
           <div class="img-box">
             <img src="images/p1.jpg" alt="" />
@@ -158,7 +158,7 @@
           </div>
         </div>
       </div>
-      <div class="item facade">
+      <div class="item fruits">
         <div class="box">
           <div class="img-box">
             <img src="images/p2.jpg" alt="" />
@@ -170,7 +170,7 @@
           </div>
         </div>
       </div>
-      <div class="item perforated decorative">
+      <div class="item other crops vegetables">
         <div class="box">
           <div class="img-box">
             <img src="images/p3.jpg" alt="" />
@@ -182,19 +182,6 @@
           </div>
         </div>
       </div>
-      <div class="item railing">
-        <div class="box">
-          <div class="img-box">
-            <img src="images/p1.jpg" alt="" />
-            <div class="btn_overlay">
-              <a href="" class="">
-                See More
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
   </section>
 
   <!-- end portfolio section -->
@@ -206,7 +193,7 @@
     <div class="info_container layout_padding2">
       <div class="container">
         <div class="info_logo">
-          <a class="navbar-brand" href="index.html"> Tro<span>Weld</span> </a>
+          <a class="navbar-brand" href="index.html"> Agro<span>Mart</span> </a>
         </div>
         <div class="info_main">
           <div class="row">
@@ -236,11 +223,10 @@
             </div>
             <div class="col-md-3 ">
               <h5>
-                Welding
+                Farming
               </h5>
               <p>
-                Lorem ipsum dolor sit amet, consectetur
-                adipiscinaliquaLoreadipiscing
+                A Need For Every Living One
               </p>
             </div>
             <div class="col-md-3 mx-auto  ">
@@ -264,11 +250,10 @@
             </div>
             <div class="col-md-3">
               <h5>
-                Our welding center
+                Our center
               </h5>
               <p>
-                Lorem ipsum dolor sit amet, consectetur
-                adipiscinaliquaLoreadipiscing
+               mahim mumbai
               </p>
             </div>
           </div>
@@ -290,7 +275,7 @@
                     <a href="#" class="link-box">
                       <i class="fa fa-phone" aria-hidden="true"></i>
                       <span>
-                        Call +01 1234567890
+                        Call +91 7208600293
                       </span>
                     </a>
                   </div>
@@ -298,7 +283,7 @@
                     <a href="#" class="link-box">
                       <i class="fa fa-envelope" aria-hidden="true"></i>
                       <span>
-                        demo@gmail.com
+                        agromart@gmail.com
                       </span>
                     </a>
                   </div>
@@ -328,7 +313,7 @@
     <div class="container">
       <p>
         &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
+        <a href="https://html.design/">AgroMart</a>
       </p>
     </div>
   </footer>
