--- a/portfolio.html
+++ b/portfolio.html
@@ -149,7 +149,7 @@
       <div class="item vegetables">
         <div class="box">
           <div class="img-box">
-            <img src="images/p1.jpg" alt="" />
+            <img src="images/onion.jpeg" alt="" />
             <div class="btn_overlay">
               <a href="" class="">
                 See More
