--- a/portfolio.html
+++ b/portfolio.html
@@ -161,7 +161,7 @@
       <div class="item fruits">
         <div class="box">
           <div class="img-box">
-            <img src="images/p2.jpg" alt="" />
+            <img src="images/carrots.jpg" alt="" />
             <div class="btn_overlay">
               <a href="" class="">
                 See More
