--- a/portfolio.html
+++ b/portfolio.html
@@ -153,6 +153,18 @@
             <div class="btn_overlay">
               <a href="" class="">
                 See More
+                </a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="item vegetable">
+        <div class="box">
+          <div class="img-box">
+            <img src="images/carrots.jpg" alt="" />
+            <div class="btn_overlay">
+              <a href="" class="">
+                See More
               </a>
             </div>
           </div>
