--- a/portfolio.html
+++ b/portfolio.html
@@ -170,10 +170,46 @@
           </div>
         </div>
       </div>
+       <div class="item vegetable">
+        <div class="box">
+          <div class="img-box">
+            <img src="images/tomato.jpg" alt="" />
+            <div class="btn_overlay">
+              <a href="" class="">
+                See More
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="item fruits">
         <div class="box">
           <div class="img-box">
-            <img src="images/carrots.jpg" alt="" />
+            <img src="images/mango.jpg" alt="" />
+            <div class="btn_overlay">
+              <a href="" class="">
+                See More
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="item fruits">
+        <div class="box">
+          <div class="img-box">
+            <img src="images/watermelon.jpg" alt="" />
+            <div class="btn_overlay">
+              <a href="" class="">
+                See More
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="item fruits">
+        <div class="box">
+          <div class="img-box">
+            <img src="images/banana.jpg" alt="" />
             <div class="btn_overlay">
               <a href="" class="">
                 See More
