--- a/portfolio.html
+++ b/portfolio.html
@@ -185,7 +185,7 @@
       <div class="item fruits">
         <div class="box">
           <div class="img-box">
-            <img src="images/mango.jpg" alt="" />
+            <img src="images/mango.jpg.webp" alt="" />
             <div class="btn_overlay">
               <a href="" class="">
                 See More
