--- a/service.html
+++ b/service.html
@@ -78,7 +78,7 @@
       <div class="header_bottom">
         <div class="container-fluid">
           <nav class="navbar navbar-expand-lg custom_nav-container ">
-            <a class="navbar-brand navbar_brand_mobile" href="index.html"> Tro<span>Weld</span> </a>
+            <a class="navbar-brand navbar_brand_mobile" href="index.html"> Agro<span>Mart</span> </a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class=""> </span>
@@ -134,7 +134,7 @@
         <div class="col-sm-6 col-md-4">
           <div class="box ">
             <div class="img-box">
-              <img src="images/s1.png" alt="" />
+              <img src="images/seller.jpg.png" alt="" />
             </div>
             <div class="detail-box">
               <h5>
@@ -149,7 +149,7 @@
         <div class="col-sm-6 col-md-4">
           <div class="box ">
             <div class="img-box">
-              <img src="images/s2.png" alt="" />
+              <img src="images/buyer.png" alt="" />
             </div>
             <div class="detail-box">
               <h5>
@@ -164,7 +164,7 @@
         <div class="col-sm-6 col-md-4">
           <div class="box ">
             <div class="img-box">
-              <img src="images/s3.png" alt="" />
+              <img src="images/new.png" alt="" />
             </div>
             <div class="detail-box">
               <h5>
