--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
     <header class="header_section">
       <div class="header_top">
         <div class="container-fluid header_top_container">
-          <a class="navbar-brand " href="index.html"> Tro<span>Weld</span> </a>
+          <a class="navbar-brand " href="index.html"> Agro<span>Mart</span> </a>
           <div class="contact_nav">
             <a href="">
               <i class="fa fa-map-marker" aria-hidden="true"></i>
@@ -142,15 +142,7 @@
                 <div class="form-group col-lg-6">
                   <input type="text" class="form-control" placeholder="Phone Number" />
                 </div>
-                <div class="form-group col-lg-6">
-                  <select name="" id="" class="form-control wide">
-                    <option value="">Select Service</option>
-                    <option value="">Service 1</option>
-                    <option value="">Service 2</option>
-                    <option value="">Service 3</option>
-                  </select>
-                </div>
-              </div>
+               
               <div class="form-row">
                 <div class="form-group col">
                   <input type="email" class="form-control" placeholder="Email" />
@@ -169,15 +161,7 @@
             </form>
           </div>
         </div>
-        <div class="col-md-6 px-0">
-          <div class="map_container">
-            <div class="map">
-              <div id="googleMap"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+       
   </section>
   <!-- end contact section -->
 
@@ -187,7 +171,7 @@
     <div class="info_container layout_padding2">
       <div class="container">
         <div class="info_logo">
-          <a class="navbar-brand" href="index.html"> Tro<span>Weld</span> </a>
+          <a class="navbar-brand" href="index.html"> Agro<span>Mart</span> </a>
         </div>
         <div class="info_main">
           <div class="row">
@@ -217,11 +201,10 @@
             </div>
             <div class="col-md-3 ">
               <h5>
-                Welding
+                FARMING
               </h5>
               <p>
-                Lorem ipsum dolor sit amet, consectetur
-                adipiscinaliquaLoreadipiscing
+                A Need For Every Living One
               </p>
             </div>
             <div class="col-md-3 mx-auto  ">
@@ -245,11 +228,10 @@
             </div>
             <div class="col-md-3">
               <h5>
-                Our welding center
+                Our center
               </h5>
               <p>
-                Lorem ipsum dolor sit amet, consectetur
-                adipiscinaliquaLoreadipiscing
+               mahim mumbai
               </p>
             </div>
           </div>
@@ -271,7 +253,7 @@
                     <a href="#" class="link-box">
                       <i class="fa fa-phone" aria-hidden="true"></i>
                       <span>
-                        Call +01 1234567890
+                        Call +91 7208600293
                       </span>
                     </a>
                   </div>
@@ -279,7 +261,7 @@
                     <a href="#" class="link-box">
                       <i class="fa fa-envelope" aria-hidden="true"></i>
                       <span>
-                        demo@gmail.com
+                        agromart@gmail.com
                       </span>
                     </a>
                   </div>
@@ -309,7 +291,7 @@
     <div class="container">
       <p>
         &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
+        <a href="https://html.design/">agromart/a>
       </p>
     </div>
   </footer>
